# huggingface-datasets_Rico

./: README.md  Rico.py  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: Rico_test.py
